[tool.poetry]
name = "django-import-export-extensions"
version = "0.4.1"
description = "Extend functionality of `django-import-export`"
license = "MIT"
authors = ["Saritasa <pypi@saritasa.com>"]
maintainers = [
    "Nikita Azanov <nikita.azanov@saritasa.com>",
    "Vladislav Romaschenko <vladislav.romaschenko@saritasa.com>",
    "Andrey Otto <andrey.otto@saritasa.com>",
    "Stanislav Khlud <stanislav.khlud@saritasa.com>",
]
readme = "README.rst"
repository = "https://github.com/saritasa-nest/django-import-export-extensions"
documentation = "https://django-import-export-extensions.readthedocs.io"
keywords = [
    "python",
    "json",
    "django",
    "csv",
    "xlsx",
    "celery",
    "import_export",
    "django_import_export_extensions"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
packages = [{include = "import_export_extensions"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2"
django-import-export = "^3.3.3"
# Django REST Framework
# https://www.django-rest-framework.org/
djangorestframework = "^3.14.0"
# OpenApi auto specs generator
# https://drf-spectacular.readthedocs.io/en/latest/
drf-spectacular = "^0.26.5"
# Filter querysets dynamically
# https://django-filter.readthedocs.io/en/stable/
django-filter = "^23.4"
# Different useful Django utils
# https://django-extensions.readthedocs.io/en/latest/
django-extensions = "^3.2.3"
# Implementation of a pickled object field in django
# https://github.com/gintas/django-picklefield
django-picklefield = "^3.1"
# Celery
# https://docs.celeryproject.org/en/stable/
celery = {extras = ["redis"], version = "^5.3.6"}
# HTTP library for Python
# https://requests.readthedocs.io/en/latest/
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.18.1"

[tool.poetry.group.linters.dependencies]
flake8 = "^6.1.0"
# A plugin for Flake8 finding likely bugs and design problems in your program.
# https://github.com/PyCQA/flake8-bugbear
flake8-bugbear = "^23.11.28"
# A flake8 plugin checking common style issues or inconsistencies with pytest-based tests.
# https://github.com/m-burst/flake8-pytest-style
flake8-pytest-style = "^1.7.2"
# A flake8 plugin that warn about backslashes usage.
# https://github.com/wemake-services/flake8-broken-line
flake8-broken-line = "^1.0.0"
# A simple module that adds an extension for the fantastic pydocstyle tool to flake8.
# https://github.com/PyCQA/flake8-docstrings
flake8-docstrings = "^1.7.0"
# A flake8 plugin that checks django code style.
# https://github.com/rocioar/flake8-django
flake8-django = "^1.4"
# Flake8 Extension to lint for quotes.
# https://github.com/zheller/flake8-quotes
flake8-quotes = "^3.3.2"
# A flake8 plug-in loading the configuration from pyproject.toml
# https://pypi.org/project/Flake8-pyproject/
flake8-pyproject = "^1.2.3"
# McCabe complexity checker.
# https://github.com/PyCQA/mccabe
mccabe = "^0.7.0"
# Mypy is a static type checker for Python.
# https://mypy.readthedocs.io/en/stable/
mypy = "^1.7.1"
# This is a PEP 561 type stub package for the `requests` package
# https://pypi.org/project/types-requests/
types-requests = "^2.31.0.10"

[tool.poetry.group.test.dependencies]
# Provides a Django management command to check whether the primary database is ready to accept connections.
# https://pypi.org/project/django-probes/
django-probes = "^1.7.0"
# Plugin for pytest that provides a set of useful tools for testing Django applications and projects
# https://pytest-django.readthedocs.io/en/latest/
pytest-django = "^4.7.0"
# This plugin provides a mocker fixture for pytest
# https://pypi.org/project/pytest-mock/
pytest-mock = "^3.12.0"
# Package for generating test data
# https://factoryboy.readthedocs.io/en/stable/
factory-boy = "^3.3.0"
# Werkzeug is a comprehensive WSGI web application library
# https://werkzeug.palletsprojects.com/en/3.0.x/
werkzeug = "^3.0.1"
# Tool for measuring code coverage of Python programs
# https://coverage.readthedocs.io/en/7.3.2/
coverage = "^7.3.2"
# Psycopg is a PostgreSQL adapter for the Python
# https://www.psycopg.org/docs/install.html
psycopg2-binary = "^2.9.9"

[tool.poetry.group.docs.dependencies]
# Package for documnation generation
# https://www.sphinx-doc.org/en/master/
sphinx = "^7.2.6"
# Theme for documentation
# https://pypi.org/project/sphinx-rtd-theme/
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.local.dependencies]
# A Python library for parsing and creating TOML
# https://pypi.org/project/toml/
toml = "^0.10.2"
# A framework for managing and maintaining multi-language pre-commit hooks.
# https://pre-commit.com/
pre-commit = "^3.5.0"
# Collection of invoke commands which used in Saritasa organization
# https://github.com/saritasa-nest/saritasa-python-invocations/
saritasa-invocations = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 79
multi_line_output = 3
known_django = "django"
known_drf = "rest_framework"
known_apps = "import_export_extensions"
skip = [
    "migrations",
    "_tmp,src",
    "scripts",
    ".venv",
    "node_modules",
    "config",
]
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "DRF",
    "THIRDPARTY",
    "FIRSTPARTY",
    "APPS",
    "LOCALFOLDER",
]
include_trailing_comma = true
default_section = "THIRDPARTY"

[tool.flake8]
ignore = [
    # https://www.flake8rules.com/rules/E126.html
    "E126",
    # https://www.flake8rules.com/rules/W503.html
    "W503",
    # https://www.flake8rules.com/rules/W504.html
    "W504",
    # https://github.com/m-burst/flake8-pytest-style/blob/master/docs/rules/PT004.md
    "PT004",
    # http://www.pydocstyle.org/en/latest/error_codes.html
    "D100",
    "D106",
    "D107",
    "D204",
    "D301",
]
extend-select = [
    "DJ10",  # Model should define verbose_name in Meta class
    "DJ11",  # Model should define verbose_name_plural in Meta class
]
statistics = true
count = true
max-complexity = 10
max-line-length = 100
pytest-fixture-no-parentheses = true
pytest-parametrize-names-type = "list"
pytest-parametrize-values-type = "list"
pytest-parametrize-values-row-type = "list"
inline-quotes = "double"
docstring-quotes = "double"
docstring-convention = "pep257"
exclude = [
    "migrations",
    ".venv",
    "__init__.py",
    "docs",
    "tests/settings.py",
]

[tool.mypy]
ignore_missing_imports = true
implicit_optional = false

warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
allow_redefinition = false
disallow_any_generics = true
strict_equality = true
strict_optional = true

ignore_errors = false
local_partial_types = true

enable_error_code = [
    "truthy-bool",
    "redundant-expr",
]

disable_error_code = [
    "attr-defined",
    "index",
    "annotation-unchecked",
]

exclude = [
    "settings.py",
    "docs/",
]

[[tool.mypy.overrides]]
module = "tests.*"
warn_unreachable = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

[tool.coverage.run]
source = [
    "import_export_extensions",
]
omit = [
    "import_export_extensions/migrations",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "pass",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
